@@ -1,3 +1,13 @@
+2022-03-04  Sihui Liu  <sihui_liu@apple.com>
+
+        Add null check for path in makeAllDirectories
+        https://bugs.webkit.org/show_bug.cgi?id=237477
+
+        Reviewed by Darin Adler.
+
+        * wtf/posix/FileSystemPOSIX.cpp:
+        (WTF::FileSystemImpl::makeAllDirectories):
+
 2022-03-04  Myles C. Maxfield  <mmaxfield@apple.com>
 
         [iOS] Books ASSERTs upon opening a book with a debug build of WebKit
